# async_logger

./: CMakeLists.txt  README.md
include/: logger.hpp
include/logger_include/: async_buffer.hpp  async_logger.hpp  async_worker.hpp  common.hpp  lf_buffer.hpp  log_level.hpp  manager.hpp  thread_pool.hpp
logger/: CMakeLists.txt
logger/include/: async_buffer.hpp  async_logger.hpp  async_worker.hpp  common.hpp  log_flush.hpp  manager.hpp  message_builder.hpp  thread_pool.hpp
logger/src/: async_buffer.cpp  async_logger.cpp  async_worker.cpp  common.cpp  log_flush.cpp  main.cpp  manager.cpp  message_builder.cpp
logger/test/: logger_test_1.cpp  logger_test_2.cpp  logger_test_3.cpp  logger_test_4.cpp  logger_test_5.cpp  logger_test_6.cpp  thread_pool_test1.cpp
src/: async_buffer.cpp  async_logger.cpp  async_worker.cpp  log_flush.cpp  log_level.cpp  message_builder.cpp  thread_pool.cpp
test/: logger_test.cpp  logger_test_1.cpp  logger_test_2.cpp  logger_test_3.cpp  logger_test_5.cpp  logger_test_6.cpp  multithread_logger_test.cpp  threadpool_test.cpp
test/legacy_tests/: logger_test_4.cpp  thread_pool_test1.cpp
